Добавил тесты unittest

--- a/tox.ini
+++ b/tox.ini
@@ -20,3 +20,4 @@ commands =
              --disallow-untyped-decorators \
              --ignore-missing-imports --pretty
     vulture main.py dbsetup.py --min-confidence 70
+    python test_cases.py
